--- a/force-app/main/default/pages/IndentPdf.page
+++ b/force-app/main/default/pages/IndentPdf.page
@@ -76,24 +76,30 @@
                 <tr>
                     <td style="border:none;padding:0px;" width="20%" valign="top">
                         <left>
-                            <apex:image url="{!$Resource.PerformaLeftSidelogo}" width="230" height="70"/> 
+                            <apex:image url="{!$Resource.PerformaLeftSidelogo}" width="210" height="60"/> 
                         </left>
                     </td>
                     <td style="border:none;padding:0px;" width="60%" valign="top">
                         <center>
-                            <b><apex:outputText value="POWERPARTS PRIVATE LIMITED" style="font-size:16px;font-family: Arial;" /></b><br/>
-                            <b><apex:outputText value="Registered Office : " style="font-size:13px;font-family: Arial;" /></b>
-                            <apex:outputText value="N-122, Panchsheel Park, New Delhi - 100 017" style="font-size:11px;font-family: Arial;" /><br/><br/>
-                            <b><apex:outputText value="PPL HEAD OFFICE (GURGAON)" style="font-size:16px;font-family: Arial;" /></b><br/>
-                            <apex:outputText value="114, PACE CITY-I, SECTOR - 37," style="font-size:13px;font-family: Arial;" /><br/>
-                            <apex:outputText value="GURGAON - 122001, HARYANA (INDIA)" style="font-size:13px;font-family: Arial;" /><br/><br/>
-                            
-                            <apex:outputText value="VAT/TIN No. 06871943308" style="font-size:13px;font-family: Arial;" /><br/>
-                            <apex:outputText value="Tel. 0124-4036614,4019215" style="font-size:13px;font-family: Arial;" />
+                            <b><apex:outputText value="POWERPARTS PRIVATE LIMITED" style="font-size:13px;font-family: Arial;" /></b><br/>
+                            <b><apex:outputText value="Registered Office : " style="font-size:11px;font-family: Arial;" /></b>
+                            <apex:outputText value="N-122, Panchsheel Park, New Delhi - 100 017" style="font-size:11px;font-family: Arial;" /><br/>
+                           
+                            <b style="font-size:13px;font-family: Arial;">{!pdfheader.Address_Header__c}</b><br/>
+                            <div style="font-size:11px;font-family: Arial;">{!pdfheader.Address_Line1__c}<br/>
+                            {!pdfheader.Address_Line_2__c}<br/>
+                            {!pdfheader.Gstin__c}<br/><br/>
+                            {!pdfheader.IEC_No__c}&nbsp;&nbsp;&nbsp;{!pdfheader.PAN_No__c}<br/>
+                            {!pdfheader.BANK__c}<br/>
+                            {!pdfheader.Bank_A_C_No__c}&nbsp;&nbsp;&nbsp;{!pdfheader.IFC_RTGS_NEFT__c}<br/>
+                            {!pdfheader.Email__c}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{!pdfheader.Tel__c} 
+                            </div>
                         </center>
                     </td>
                     <td style="border:none;padding:0px;" width="60%" valign="top">
-
+                        <Right>
+                            <apex:image url="{!$Resource.PerformaRightSidelogo}" width="210" height="60"/> 
+                        </Right>
                     </td>
                 </tr>
             </table>
