--- a/force-app/main/default/aura/CreateDeliveryNoteLightngComp/CreateDeliveryNoteLightngComp.cmp
+++ b/force-app/main/default/aura/CreateDeliveryNoteLightngComp/CreateDeliveryNoteLightngComp.cmp
@@ -3,7 +3,7 @@
     <aura:handler name="init" value="{!this}" action="{!c.doinit}" />
     <aura:attribute name="wrapMains" type="object" />
     <aura:attribute name="disableCheckBox" type="Boolean" />
-
+    
     <aura:html tag="style">
         .cuf-content {
         padding: 0 0rem !important;
@@ -17,46 +17,154 @@
         max-height:unset !important;
         }
     </aura:html>    
-        <div class="slds-table--header-fixed_container slds-scrollable_y" style="height:10rem;">
-                <table class="slds-table slds-table--bordered slds-table_striped slds-table--cell-buffer slds-max-medium-table--stacked-horizontal" >
-                    <thead>
-                        <tr class="slds-line-height_reset">
-                            <th class="" scope="col" style="width: 1rem;">
-                                <div class="slds-truncate slds-cell-wrap" title="checkbox"><ui:inputCheckbox aura:id="cboxRow" change="{!c.selectAll}"/></div>
-                            </th>
-                            <th class="" scope="col" style="width: 5rem;">
-                                <div class="slds-truncate slds-cell-wrap" title="Product Number">Product Number</div>
-                            </th>
-                            <th class="" scope="col" style="width: 2rem;">
-                                <div class="slds-truncate slds-cell-wrap " title="Product Name">Product Name</div>
-                            </th>
-                            <th class="" scope="col" style="width: 2rem;">
-                                <div class="slds-truncate slds-cell-wrap" title="Actual Qty">Actual Qty</div>
-                            </th>
-                            <th class="" scope="col" style="width: 2rem;">
-                                <div class="slds-truncate slds-cell-wrap" title="Quantity">Quantity</div>
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody style="overflow-y: scroll;">
-                        <aura:iteration items="{!v.wrapMains.wrapChildlst}" var="cusProd">
-                            <tr width="100%">
-                                
-                                  <td class="dataCell" style="width: 8rem;" ><lightning:input type="checkbox" value="{!cusProd.isSelected}" checked="{!cusProd.isSelected}" disabled="{!cusProd.checkboxDisable}"/></td>
-                                <td class="dataCell" style="width: 8rem;"><a href="{! '/' + cusProd.objDNLI.Product_Part__c}"> {!cusProd.soliChild.Product_Part__r.Name}</a></td>
-                                <td class="dataCell" style="width: 9rem;">{!cusProd.soliChild.Product_Part__r.Part_Name__c}</td>
-                                <td class="dataCell" style="width: 7rem;">{!cusProd.soliChild.Quantity__c}</td>
-                                <td class="dataCell" style="width: 7rem;"><lightning:input type="Number" value="{!cusProd.reMaininQTY}" disabled="{!cusProd.checkboxDisable}"/></td>
-
-                            </tr> 
-                        </aura:iteration>
-                    </tbody>
-                </table>
-           </div>
+    <div class="slds-table--header-fixed_container slds-scrollable_y" style="width:100%; overflow-x:auto">
+        <table class="slds-table slds-table--bordered slds-table_striped slds-table--cell-buffer slds-max-medium-table--stacked-horizontal" style="width:150% !important;">
+            <thead>
+                <tr class="slds-line-height_reset">
+                    <th class="" scope="col" style="text-align:center" >
+                        <div class="slds-truncate slds-cell-wrap" title="checkbox"><ui:inputCheckbox aura:id="cboxRow" change="{!c.selectAll}"/></div>
+                    </th>
+                    <th class="" scope="col" style="text-align:center" >
+                        <div class="slds-truncate slds-cell-wrap" title="Product Number">Product Number</div>
+                    </th>
+                    <th class="" scope="col" style="text-align:center" >
+                        <div class="slds-truncate slds-cell-wrap " title="Product Name">Product Name</div>
+                    </th>
+                    <th class="" scope="col" style="text-align:center" >
+                        <div class="slds-truncate slds-cell-wrap" title="SO Qty">SO Qty</div>
+                    </th>
+                    <th class="" scope="col" style="text-align:center" >
+                        <div class="slds-truncate slds-cell-wrap" title="Quantity">Quantity</div>
+                    </th>
+                    <th class="" scope="col" style="width:7% !important; text-align:center;">
+                        <div class="slds-truncate slds-cell-wrap" title="Sales price">Sales price</div>
+                    </th>
+                    <th class="" scope="col" style="width:7% !important; text-align:center;">
+                        <div class="slds-truncate slds-cell-wrap " title="Total Price">Total Price</div>
+                    </th>
+                    <th class="" scope="col" style="text-align:center" >
+                        <div class="slds-truncate slds-cell-wrap" title="Discount%">Discount%</div>
+                    </th>
+                    <th class="" scope="col" style="width:7% !important; text-align:center;">
+                        <div class="slds-truncate slds-cell-wrap" title="Discount Amount">Discount Amount</div>
+                    </th>
+                    <th class="" scope="col" style="width:7% !important; text-align:center;">
+                        <div class="slds-truncate slds-cell-wrap" title="Total Amount">Total Amount</div>
+                    </th>
+                    <th class="" scope="col" style="width:7% !important; text-align:center;">
+                        <div class="slds-truncate slds-cell-wrap" title="Discount" >HSN Code</div>
+                    </th>
+                    <aura:if isTrue="{!!v.wrapMains.igstvalue}">
+                        <th class="" scope="col" style="text-align:center" >
+                            <div class="slds-truncate slds-cell-wrap" title="CGST%">CGST%</div>
+                        </th>
+                        <th class="" scope="col" style="width:7% !important; text-align:center;">
+                            <div class="slds-truncate slds-cell-wrap" title="CGST Amount">CGST Amount</div>
+                        </th>
+                        <th class="" scope="col" style="text-align:center" >
+                            <div class="slds-truncate slds-cell-wrap" title="SGST%">SGST%</div>
+                        </th>
+                        <th class="" scope="col" style="width:7% !important; text-align:center;">
+                            <div class="slds-truncate slds-cell-wrap" title="SGST Amount">SGST Amount</div>
+                        </th>
+                    </aura:if>
+                    <aura:if isTrue="{!v.wrapMains.igstvalue}">
+                        <th class="" scope="col" style="text-align:center;" >
+                            <div class="slds-truncate slds-cell-wrap" title="IGST%">IGST%</div>
+                        </th>
+                        <th class="" scope="col" style="width:7% !important; text-align:center;">
+                            <div class="slds-truncate slds-cell-wrap" title="IGST Amount">IGST Amount</div>
+                        </th>
+                    </aura:if>
+                    <th class="" scope="col" style="width:7% !important; text-align:center;">
+                        <div class="slds-truncate slds-cell-wrap" title="Net Amount">Net Amount</div>
+                    </th>
+                    <th class="" scope="col" style="width:10% !important; text-align:center;" >
+                        <div class="slds-truncate slds-cell-wrap" title="Delivery Date">Delivery Date</div>
+                    </th>
+                    <th class="" scope="col" style="width:15% !important; text-align:center;">
+                        <div class="slds-truncate slds-cell-wrap" title="Remark">Remark</div>
+                    </th>
+                    
+                </tr>
+            </thead>
+            <tbody style="overflow-x: scroll;">
+                <aura:iteration items="{!v.wrapMains.wrapChildlst}" var="cusProd" indexVar="index">
+                    <tr width="100%">
+                        
+                        <td class="dataCell">
+                            <lightning:input type="checkbox" value="{!cusProd.isSelected}" checked="{!cusProd.isSelected}" disabled="{!cusProd.checkboxDisable}"/>
+                        </td>
+                        <td class="dataCell">
+                            <a href="{! '/' + cusProd.productid}"> {!cusProd.productnumber}</a>
+                        </td>
+                        <td class="dataCell">
+                            {!cusProd.productname}
+                        </td>
+                        <td class="dataCell">
+                            {!cusProd.quantity}
+                        </td>
+                        <td class="dataCell" title="{!cusProd.reMaininQTY}"><lightning:input name="{!index}" variant="label-hidden" type="Number" min="0" value="{!cusProd.reMaininQTY}" required="true" onchange="{!c.onRemainQtyChange}" disabled="{!cusProd.checkboxDisable}"/></td>
+                        <td class="dataCell" title="{!cusProd.salesprice}"> 
+                            <lightning:input id="price"  variant="label-hidden" name="{!index}" min="1" step="0.01" type="number" value="{!cusProd.salesprice}"  onchange="{!c.onSalesPriceChange}" disabled="true"/>
+                        </td>
+                        <td class="dataCell" title="{!cusProd.totalprice}">
+                            <lightning:input id="quantity"  variant="label-hidden" name="{!index}" type="number" step="0.01" value="{!cusProd.totalprice}" disabled="true" />
+                        </td>
+                        <td class="dataCell" title="{!cusProd.discount}">
+                            <lightning:input id="discountpercent"  variant="label-hidden" name="{!index}" min="0"  step="0.01" type="number" formatter="percent-fixed" maxlength='5' value="{!cusProd.discount}"  onchange="{!c.onDiscountChange}"  default="0" disabled="true"/>
+                        </td>
+                        <td class="dataCell" title="{!cusProd.discountamount}">
+                            <lightning:input id="Discountamount"  variant="label-hidden" name="{!index}" min="0" step="0.01" type="number" value="{!cusProd.discountamount}"  onchange="{!c.onDiscountamtChange}"  default="0" disabled="true"/>
+                        </td>
+                        <td class="dataCell" title="{!cusProd.totalamount}">
+                            <lightning:input id="quantity"  variant="label-hidden" name="{!index}" type="number" step="0.01" value="{!cusProd.totalamount}" disabled="true" />
+                        </td>
+                        <td class="dataCell" title="{!cusProd.hsncode}">
+                            <lightning:input  type="Text" variant="label-hidden"  value="{!cusProd.hsncode}" disabled="true"/>
+                        </td>
+                        <!-- Check CGST and SGST  -->
+                        <aura:if isTrue="{!!v.wrapMains.igstvalue}">
+                            <td class="dataCell" title="{!cusProd.cgst}">
+                                <lightning:input id="CGSTPercentage" variant="label-hidden"  name="{!index}" step="0.01" type="number" min="0" formatter="percent-fixed" maxlength='5' value="{!cusProd.cgst}"  onchange="{!c.onCGSTChange}"  default="0" disabled="true"/>
+                            </td>
+                            <td class="dataCell" title="{!cusProd.cgstamount}">
+                                <lightning:input id="CGSTAmount" name="{!index}" type="number" variant="label-hidden"  value="{!cusProd.cgstamount}"  step="0.01"  disabled="true" />
+                            </td>
+                            <td class="dataCell" title="{!cusProd.sgst}">
+                                <lightning:input id="SGSTPercentage" variant="label-hidden"  name="{!index}" type="number" step="0.01" min="0" formatter="percent-fixed" maxlength='5' value="{!cusProd.sgst}"  onchange="{!c.onSGSTChange}"  default="0" disabled="true"/>
+                            </td>
+                            <td class="dataCell" title="{!cusProd.sgstamount}">
+                                <lightning:input id="SGSTAmount" name="{!index}" type="number" variant="label-hidden"  value="{!cusProd.sgstamount}" step="0.01" disabled="true"/>
+                            </td>
+                        </aura:if>
+                        <!-- Check IGST  -->
+                        <aura:if isTrue="{!v.wrapMains.igstvalue}">
+                            <td class="dataCell" title="{!cusProd.igst}">
+                                <lightning:input id="IGSTPercentage" variant="label-hidden"  name="{!index}" type="number" step="0.01" min="0" formatter="percent-fixed" maxlength='5' value="{!cusProd.igst}"  onchange="{!c.onIGSTChange}"  default="0" disabled="true"/>
+                            </td>
+                            <td class="dataCell" title="{!cusProd.igstamount}">
+                                <lightning:input id="IGSTAmount" name="{!index}" type="number" variant="label-hidden"  value="{!cusProd.igstamount}" step="0.01" disabled="true"/>
+                            </td>
+                        </aura:if>
+                        <td class="dataCell" title="{!cusProd.nettotal}">
+                            <lightning:input variant="label-hidden"  id="NetTotal" name="{!index}" type="number" step="0.01" value="{!cusProd.nettotal}" disabled="true"/>
+                        </td>
+                        <td class="dataCell" title="{!cusProd.deliverydate}">
+                            <ui:inputDate aura:id="{!index}" class="field label-hidden" value="{!cusProd.deliverydate}" displayDatePicker="true" change="{!c.deliverydateaction}" disabled="false" />      
+                        </td>
+                        <td class="dataCell" title="{!cusProd.remark}">
+                            <lightning:input  type="Text" variant="label-hidden"  value="{!cusProd.remark}" disabled="false"/>
+                        </td>
+                    </tr> 
+                </aura:iteration>
+            </tbody>
+        </table>
+    </div>
     <footer>
         <div class="modal-footer slds-modal__footer">      
-                    <lightning:button variant="brand" label="Save" onclick="{!c.createDeliveryNote}"/> 
-                    <lightning:button variant="brand" label="Cancel" onclick="{!c.cancel}"/>  
-                     </div>
-                </footer>
+            <lightning:button variant="brand" label="Save" onclick="{!c.createDeliveryNote}"/> 
+            <lightning:button variant="brand" label="Cancel" onclick="{!c.cancel}"/>  
+        </div>
+    </footer>
 </aura:component>
